--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
 
 <head>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;600&display=swap"
+    rel="stylesheet">
 
   <title>Controle Financeiro</title>
 </head>
